styles/css/vertical-tabs.css
/* line 3, ../scss/vertical-tabs.scss */
.h5p-vtab-wrapper:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: ' ';
  clear: both;
  height: 0;
}

/* line 12, ../scss/vertical-tabs.scss */
.h5p-vtabs {
  float: left;
  width: 212px;
  position: relative;
  padding: 0;
}

/* line 18, ../scss/vertical-tabs.scss */
.h5p-vtab-forms {
  border: 1px solid #d0d0d1;
  margin-left: 217px;
}

/* line 22, ../scss/vertical-tabs.scss */
.h5p-vtab-form {
  position: relative;
  display: none;
  margin: 0;
  border: none;
  padding: 0;
}

/* line 29, ../scss/vertical-tabs.scss */
.h5p-vtab-form.h5p-current {
  display: block;
}

/* line 32, ../scss/vertical-tabs.scss */
.h5p-vtab-form > .field {
  margin: 0;
}

/* line 35, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-vtab-li,
.h5p-vtabs .h5p-placeholder {
  position: relative;
  padding: 0;
  margin: 0 0 3px 0;
}

/* line 42, ../scss/vertical-tabs.scss */
.h5p-vtab-a {
  border: 1px solid #d0d0d1;
  background-color: #f5f5f5;
  height: 38px;
  font-size: 14px;
  font-weight: 600;
  line-height: 38px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: 0 30px;
  margin: 0 12px 0 0;
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
}

/* line 61, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-vtab-li.h5p-current .h5p-vtab-a {
  background: #747275;
  border: 1px solid #636164;
  border-right: 0;
  color: white;
}
/* line 68, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-vtab-li.h5p-current:after, .h5p-vtabs .h5p-vtab-li.h5p-current:before {
  position: absolute;
  left: 200px;
  content: " ";
  width: 0;
  height: 0;
}
/* line 77, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-vtab-li.h5p-current:before {
  top: 0;
  border-top: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-left: 13px solid #636164;
}
/* line 84, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-vtab-li.h5p-current:after {
  top: 1px;
  border-top: 19px solid transparent;
  border-bottom: 19px solid transparent;
  border-left: 12px solid #747275;
}
/* line 92, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-vtab-li.h5p-current > .vtab-order-wrapper > .order-up,
.h5p-vtabs .h5p-vtab-li.h5p-current > .vtab-order-wrapper > .order-down {
  background: #636164;
}
/* line 96, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-vtab-li.h5p-current > .vtab-order-wrapper > .order-up[aria-disabled="false"]:hover,
.h5p-vtabs .h5p-vtab-li.h5p-current > .vtab-order-wrapper > .order-down[aria-disabled="false"]:hover {
  background: #49484a;
}
/* line 100, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-vtab-li.h5p-current > .vtab-order-wrapper > .order-up:after,
.h5p-vtabs .h5p-vtab-li.h5p-current > .vtab-order-wrapper > .order-down:after {
  color: white;
}

/* line 107, ../scss/vertical-tabs.scss */
.h5p-placeholder > .h5p-vtab-a {
  background: #e8f2fa;
  border: dashed 2px #2782d1;
  height: 36px;
}

/* line 113, ../scss/vertical-tabs.scss */
.h5p-vtabs > button {
  float: right;
  margin: 8px 14px 8px 8px;
}

/* line 118, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-moving {
  position: absolute;
  z-index: 1;
}
/* line 122, ../scss/vertical-tabs.scss */
.h5p-vtabs .h5p-moving > .h5p-vtab-a {
  cursor: grabbing;
  cursor: -moz-grabbing;
  cursor: -webkit-grabbing;
}

/* line 129, ../scss/vertical-tabs.scss */
.vtab-order-wrapper {
  position: absolute;
  top: 1px;
  left: 1px;
}
/* line 134, ../scss/vertical-tabs.scss */
.vtab-order-wrapper > .order-up,
.vtab-order-wrapper > .order-down {
  width: 19px;
  height: 19px;
  background: #d0d0d1;
  font-size: 14px;
  line-height: 19px;
  cursor: pointer;
  text-align: center;
}
/* line 144, ../scss/vertical-tabs.scss */
.vtab-order-wrapper > .order-up[aria-disabled="false"]:hover,
.vtab-order-wrapper > .order-down[aria-disabled="false"]:hover {
  background-color: #b6b6b8;
}
/* line 148, ../scss/vertical-tabs.scss */
.vtab-order-wrapper > .order-up:before,
.vtab-order-wrapper > .order-down:before {
  right: auto;
  left: -5px;
}
/* line 153, ../scss/vertical-tabs.scss */
.vtab-order-wrapper > .order-up[aria-disabled="true"],
.vtab-order-wrapper > .order-down[aria-disabled="true"] {
  cursor: default;
}
/* line 156, ../scss/vertical-tabs.scss */
.vtab-order-wrapper > .order-up[aria-disabled="true"]:after,
.vtab-order-wrapper > .order-down[aria-disabled="true"]:after {
  opacity: 0.25;
}
/* line 162, ../scss/vertical-tabs.scss */
.vtab-order-wrapper > .order-up:after {
  font-family: "H5P";
  content: "\e58e";
}
/* line 167, ../scss/vertical-tabs.scss */
.vtab-order-wrapper > .order-down {
  top: auto;
  bottom: 1px;
}
/* line 171, ../scss/vertical-tabs.scss */
.vtab-order-wrapper > .order-down:after {
  font-family: "H5P";
  content: "\e58f";
}

/* line 178, ../scss/vertical-tabs.scss */
.vtab-remove-wrapper {
  position: absolute;
  top: 1px;
  right: 12px;
}
/* line 183, ../scss/vertical-tabs.scss */
.vtab-remove-wrapper > .remove {
  cursor: pointer;
  width: 1.25em;
  height: 38px;
  font-size: 1.75em;
  text-align: center;
}
/* line 190, ../scss/vertical-tabs.scss */
.vtab-remove-wrapper > .remove:after {
  font-family: "H5P";
  content: "\e890";
  color: #454347;
  opacity: 0.7;
  display: inline-block;
  line-height: 38px;
}
/* line 198, ../scss/vertical-tabs.scss */
.vtab-remove-wrapper > .remove:after:hover {
  opacity: 1;
}

/* line 205, ../scss/vertical-tabs.scss */
.h5p-current > .vtab-remove-wrapper > .remove:after {
  color: #fff;
}

/* line 209, ../scss/vertical-tabs.scss */
.h5peditor-button.add-entity {
  width: 200px;
  height: 40px;
  background: #2579C6 linear-gradient(#3080c9 50%, transparent 50%, transparent);
  border: 1px solid #1f67a8;
  color: white;
  font-weight: 600;
  font-size: 14px;
  box-sizing: border-box;
  text-align: center;
  cursor: pointer;
  text-transform: uppercase;
  line-height: 28px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 0 5px;
  border-radius: 3px;
  margin-top: 5px;
}
/* line 230, ../scss/vertical-tabs.scss */
.h5peditor-button.add-entity:hover {
  background: #1f67a8 linear-gradient(#2a6fac 50%, transparent 50%, transparent);
}
/* line 234, ../scss/vertical-tabs.scss */
.h5peditor-button.add-entity:before {
  font-family: "H5P";
  content: "\e902";
  margin-right: -4px;
  font-weight: 400;
  font-size: 24px;
  transform: translate(-30%,15%);
  display: inline-block;
}

/* line 243, ../scss/vertical-tabs.scss */
.h5p-vtab-form > .library,
.h5p-vtab-form > .list,
.h5p-vtab-form > .group > .content {
  padding: 10px;
  border: none;
}

